<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dp_16"
        android:paddingEnd="@dimen/dp_16">

        <ImageView
            android:id="@+id/closeButton"
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_16"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleLabel"
            style="@style/Heading3Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center"
            android:paddingStart="@dimen/dp_48"
            android:paddingEnd="@dimen/dp_48"
            android:text="@string/dialog_mfa_mfa"
            android:textColor="@color/text_primary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/mfaLogoImage"
            android:layout_width="@dimen/dp_116"
            android:layout_height="@dimen/dp_116"
            android:layout_marginTop="@dimen/dp_32"
            android:src="@drawable/totp_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleLabel" />

        <TextView
            android:id="@+id/headerLabel"
            style="@style/Heading1Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_24"
            android:gravity="center"
            android:text="@string/dialog_mfa_totp"
            android:textColor="@color/text_primary"
            app:layout_constraintTop_toBottomOf="@id/mfaLogoImage" />

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center"
            android:text="@string/dialog_mfa_enter_otp"
            android:textColor="@color/text_primary"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/headerLabel" />

        <com.alimuzaffar.lib.pin.PinEntryEditText
            android:id="@+id/otpInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_16"
            android:cursorVisible="false"
            android:digits="1234567890"
            android:inputType="number"
            android:layoutDirection="ltr"
            android:maxLength="6"
            android:textIsSelectable="false"
            android:textSize="@dimen/sp_36"
            app:layout_constraintTop_toBottomOf="@id/descriptionLabel">

            <requestFocus />
        </com.alimuzaffar.lib.pin.PinEntryEditText>

        <TextView
            android:id="@+id/error"
            style="@style/ValueText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:gravity="center"
            android:text="@string/dialog_mfa_wrong_code"
            android:textColor="@color/red"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@id/otpInput"
            app:layout_constraintTop_toBottomOf="@id/otpInput" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/pasteCodeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:drawablePadding="@dimen/dp_8"
            android:fontFamily="@font/inter"
            android:text="@string/dialog_mfa_paste_code"
            android:textColor="@color/primary"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_paste"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/otpInput" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/rememberMeCheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_8"
            android:buttonTint="@color/primary"
            android:checked="true"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/dialog_mfa_remember_me"
            app:layout_constraintBottom_toTopOf="@id/otherProviderButton"
            app:layout_constraintTop_toBottomOf="@id/pasteCodeButton"
            app:layout_constraintVertical_bias="0.95" />

        <TextView
            android:id="@+id/otherProviderButton"
            style="@style/ButtonSmallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_32"
            android:background="?selectableItemBackground"
            android:padding="@dimen/dp_16"
            android:text="@string/dialog_mfa_other_provider"
            android:textColor="@color/text_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
